--- a/chatBot.ipynb
+++ b/chatBot.ipynb
@@ -6,9 +6,12 @@
       "name": "chatBot.ipynb",
       "provenance": [],
       "collapsed_sections": [
-        "dZw9hzNLAxYW"
+        "KBzifxQx_i4V",
+        "dZw9hzNLAxYW",
+        "ai2TKuz5yWDC"
       ],
-      "authorship_tag": "ABX9TyMkmZPzfyRRH4xMEu/lpsAS",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyMY8y2kp+Jk15cMAtJIe8+8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -42,13 +45,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "-oFaa8q9R3Hl",
-        "outputId": "9dea14a2-464d-4326-e5d3-3a48f72434ac"
+        "outputId": "4e7b7f6f-e2a0-449b-9b76-e6686909a39c"
       },
       "outputs": [
         {
@@ -78,9 +81,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8td6cRUJcWQg",
-        "outputId": "aa05f952-ecd6-406c-99f9-94fff3cb4bb5"
+        "outputId": "810437ae-8b55-44bc-e155-5aebd37fb0ca"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -101,7 +104,7 @@
       "metadata": {
         "id": "uIsdygUscZbj"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -113,7 +116,7 @@
       "metadata": {
         "id": "aZxPjGjdccsy"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -139,7 +142,7 @@
       "metadata": {
         "id": "wJymWRYaceeM"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -166,7 +169,7 @@
       "metadata": {
         "id": "qDVYYcQ5A6Jg"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -203,7 +206,7 @@
       "metadata": {
         "id": "7ihcHvXAB1gF"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -226,7 +229,7 @@
       "metadata": {
         "id": "mRCcGW8hIqwK"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -254,7 +257,7 @@
       "metadata": {
         "id": "48urvqD0Jd3H"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -280,7 +283,7 @@
         "print(f'final loss, loss={loss.item():.4f}')\n",
         "\n",
         "data = {\n",
-        "    \"model_state\": model.state_dict(),\n",
+        "    \"model_state\" : model.state_dict(),\n",
         "    \"input_size\": input_size,\n",
         "    \"output_size\": output_size,\n",
         "    \"hidden_size\": hidden_size,\n",
@@ -294,33 +297,10 @@
         "print(f'training complete. file saved to {FILE}')"
       ],
       "metadata": {
-        "id": "UmHSaeKB4UxD",
-        "outputId": "42dab2db-c661-4dd0-f00a-cee9d1c62dc4",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "UmHSaeKB4UxD"
       },
-      "execution_count": 18,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "epoch 100/1000, loss=1.2041\n",
-            "epoch 200/1000, loss=0.7287\n",
-            "epoch 300/1000, loss=0.0225\n",
-            "epoch 400/1000, loss=0.0901\n",
-            "epoch 500/1000, loss=0.0175\n",
-            "epoch 600/1000, loss=0.0017\n",
-            "epoch 700/1000, loss=0.0017\n",
-            "epoch 800/1000, loss=0.0037\n",
-            "epoch 900/1000, loss=0.0003\n",
-            "epoch 1000/1000, loss=0.0014\n",
-            "final loss, loss=0.0014\n",
-            "training complete. file saved to data.pth\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -369,7 +349,76 @@
       "metadata": {
         "id": "eu6pIA-2ydGg"
       },
-      "execution_count": 13,
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Chat"
+      ],
+      "metadata": {
+        "id": "ti-hbqM6_as-"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import random\n",
+        "import json\n",
+        "import torch\n",
+        "\n",
+        "\n",
+        "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
+        "\n",
+        "with open('intents.json', 'r') as json_data:\n",
+        "    intents = json.load(json_data)\n",
+        "\n",
+        "FILE = \"data.pth\"\n",
+        "data = torch.load(FILE)\n",
+        "\n",
+        "input_size = data[\"input_size\"]\n",
+        "hidden_size = data[\"hidden_size\"]\n",
+        "output_size = data[\"output_size\"]\n",
+        "all_words = data['all_words']\n",
+        "tags = data['tags']\n",
+        "model_state = data[\"model_state\"]\n",
+        "\n",
+        "model = NeuralNet(input_size, hidden_size, output_size).to(device)\n",
+        "model.load_state_dict(model_state)\n",
+        "model.eval()\n",
+        "\n",
+        "bot_name = \"Sam\"\n",
+        "print(\"Let's chat! (type 'quit' to exit)\")\n",
+        "while True:\n",
+        "    # sentence = \"do you use credit cards?\"\n",
+        "    sentence = input(\"You: \")\n",
+        "    if sentence == \"quit\":\n",
+        "        break\n",
+        "\n",
+        "    sentence = tokenize(sentence)\n",
+        "    X = bag_of_words(sentence, all_words)\n",
+        "    X = X.reshape(1, X.shape[0])\n",
+        "    X = torch.from_numpy(X).to(device)\n",
+        "\n",
+        "    output = model(X)\n",
+        "    _, predicted = torch.max(output, dim=1)\n",
+        "\n",
+        "    tag = tags[predicted.item()]\n",
+        "\n",
+        "    probs = torch.softmax(output, dim=1)\n",
+        "    prob = probs[0][predicted.item()]\n",
+        "    if prob.item() > 0.75:\n",
+        "        for intent in intents['intents']:\n",
+        "            if tag == intent[\"tag\"]:\n",
+        "                print(f\"{bot_name}: {random.choice(intent['responses'])}\")\n",
+        "    else:\n",
+        "        print(f\"{bot_name}: I do not understand...\")"
+      ],
+      "metadata": {
+        "id": "w2k_PZBT_dgG"
+      },
+      "execution_count": null,
       "outputs": []
     }
   ]
